<resources>
    <string name="lang_english">English</string>
    <string name="lang_hindi">हिंदी</string>
    <string name="lang_tamil">தமிழ்</string>
    <string name="lang_gujarati">ગુજરાતી</string>
    <string name="lang_marathi">मराठी</string>
    <string name="lang_kannada">ಕನ್ನಡ</string>
    <string name="lang_oriya">ଓଡ଼ିଆ</string>
    <string name="app_name">Samavit</string>
    <string name="copyright">Copyright \u00a9 Samavit Vikas Pvt Ltd.</string>
    <string name="profile">User Profile</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="age">Age</string>
    <string name="education">Education</string>
    <string name="occupation">Occupation</string>
    <string name="locality">Locality</string>
    <string name="rural">Rural</string>
    <string name="semi_urban">Semi-Urban</string>
    <string name="urban">Urban</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="doneButton">Done</string>
    <string name="module1">Financial Planning And Budgeting</string>
    <string name="module2">Savings</string>
    <string name="module3">Loan</string>
    <string name="module4">Insurance</string>
    <string name="module5">Pension</string>
    <string name="module6">Digital Transaction</string>
    <string name="module7">Consumer Beware</string>
    <string name="module8">Currency Literacy</string>
    <string name="module9">Others</string>
    <string name="about_us">About Us</string>
    <string name="rate_us">Rate Us\u0020\u0020</string>
    <string name="version">Version: 1.1</string>
    <string name="wait">Please Wait...</string>
    <string name="fill_all">Fill Complete Details</string>
    <string name="viewed">Viewed:</string>
    <string name="total">Total:</string>
    <string name="initial_viewed1">Viewed:\u0020\u00200\u0020\u0020\u0020\u0020Total:\u0020\u00201</string>
    <string name="initial_viewed2">Viewed:\u0020\u00200\u0020\u0020\u0020\u0020Total:\u0020\u00202</string>
    <string name="initial_viewed3">Viewed:\u0020\u00200\u0020\u0020\u0020\u0020Total:\u0020\u00203</string>
    <string name="initial_viewed6">Viewed:\u0020\u00200\u0020\u0020\u0020\u0020Total:\u0020\u00206</string>
    <string name="mfi">MFI</string>
    <string name="mfisubmit">Submit</string>
    <string name="mfi_field_staff">MFI Field Staff</string>
    <string name="name_of_branch">Name of Branch</string>
    <string name="branch_id">Branch ID</string>
    <string name="name">Name</string>
    <string-array name="designation">
        <item>Choose designation</item>
        <item>Loan Officer</item>
        <item>Assistant Branch Manager</item>
        <item>Branch Manager</item>
        <item>Other</item>
    </string-array>
    <string name="id_staff">Staff ID</string>
    <string name="location">Location</string>
    <string name="geo_location">Geo Location</string>
    <string name="identify_yourself">Identify Yourself</string>
    <string name="mfi_staff">MFI Staff</string>
    <string name="mfi_client">MFI Client</string>
    <string name="shg_member">SHG Members</string>
    <string name="others">Others</string>
    <string name="kids">Kids</string>
    <string name="group_registration">Group Registration</string>
    <string name="t_group_name">Group Name</string>
    <string name="centre_group_id">Centre/Group ID</string>
    <string name="total_member">Total members</string>
    <string name="enter_as_user">Enter As User</string>
    <string name="manage_grps">Manage Groups</string>
    <string name="or">Or</string>
    <string name="existing_groups">Existing Groups</string>
    <string name="new_group">New Group</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="date">Date</string>
    <string name="no_of_members_present">No of members present</string>
    <string name="time">Time</string>
    <string name="group_name_module">Group Name :\n</string>
    <string name="group_id_module">Group ID :\n</string>
    <string name="select_grp">Select Groups</string>
    <string name="toast">Please fill group name and ID</string>
    <string name="specify_MFI">Specify MFI</string>
    <string name="specify_designation">Specify Designation</string>
    <string name="whose_customer_are_you">Whose customer are you?</string>
    <string name="how_did_you_know_about_the_app">How did you know about this app?</string>
    <string name="video_source">Source:\u0020</string>
    <string name="video_duration">Duration:\u0020</string>
    <string name="before_watching_vdo">Please answer few simple questions before watching this video.</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="correct_answer">!!! Correct Answer !!!</string>
    <string name="ans_should_b">!!! Answer should be \'</string>
    <string name="please_select_an_option">Please select an option</string>
    <string name="what_u_learnt_from_vdo">Let us see, what you have learnt from this video.</string>
    <string name="result">Result</string>
    <string name="family1">Financial Planning</string>
    <string name="family2">Budgeting</string>
    <string name="family3">Needs and Wants</string>
    <string name="saving1">Importance of Savings</string>
    <string name="saving2">Savings in Bank</string>
    <string name="saving3">PMJDY and BSBDA</string>
    <string name="loan1">Borrowing</string>
    <string name="loan2">Credit Literacy</string>
    <string name="insurance1">Types of Insurance</string>
    <string name="insurance2">Pradhan Mantri Jeevan Jyoti Bima Yojana</string>
    <string name="insurance3">Pradhan Mantri Jan Suraksha Bima Yojana</string>
    <string name="pension1">National Pension System</string>
    <string name="pension2">Atal Pension Yojna</string>
    <string name="digital1">RuPay ATM</string>
    <string name="aeps">Aadhaar Enabled Payment System (AEPS)</string>
    <string name="digital3">USSD (*99#)</string>
    <string name="bhim">BHIM App</string>
    <string name="digital5">RuPay POS</string>
    <string name="digital6">E-Wallets</string>
    <string name="consumer1">ATM Debit Card - Fraud &amp; Prevention</string>
    <string name="consumer2">Grievance Redressal –For Loan Client</string>
    <string name="consumer3">Customer Liability and Remedies</string>
    <string name="currency1">Security Features of Rs.100</string>
    <string name="currency2">Security Features of Rs.500 and Rs.2000</string>
    <string name="other1">Financial Planning - 1</string>
    <string name="other2">Financial Planning - 2</string>
    <string name="other3">Financial Products</string>
    <string name="other4">KYC</string>
    <string name="other5">Savings</string>
    <string name="other6">Savings in Bank</string>
    <string name="other7">How to Operate a Bank a/c</string>
    <string name="other8">Sukanya Samriddhi Account</string>
    <string name="other9">Borrowing</string>
    <string name="other10">Loan from Bank</string>
    <string name="other11">Insurance and Pension Products</string>
    <string name="other12">Rashtriya Swasthya Bima Yojana (RSBY)</string>
    <string name="other13">Retirement Planning</string>
    <string name="other14">Digital Financial Services</string>
    <string name="other15">ATM</string>
    <string name="other16">ATM Debit Card - Fraud and Prevention</string>
    <string name="other17">Inflation Monster</string>
    <string name="other18">Power of Compounding</string>
    <string name="other_module1">Financial Planning and Budgeting</string>
    <string name="other_module2">Financial Products</string>
    <string name="other_module3">KYC</string>
    <string name="other_module4">Savings</string>
    <string name="other_module5">Loan</string>
    <string name="other_module6">Insurance and Pension</string>
    <string name="other_module7">Digital Transactions</string>
    <string name="other_module8">Others</string>
    <string name="do_you_like_this_video">Do You like this video?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="compulsory">Compulsory</string>
    <string name="supplementary_vidoes">Supplementary</string>
    <string name="desirable">Desirable</string>
    <string name="loan">Responsible Borrowing</string>
    <string name="insurance">Insurance</string>
    <string name="digital_transaction">Digital Transaction</string>
    <string name="pension">Pension</string>
    <string name="financial_planning_and_budgeting">Financial Planning and Budgeting</string>
    <string name="consumer_beware">Consumer Beware</string>
    <string name="currency_literacy">Currency Literacy</string>
    <string name="choices">Choices</string>
    <string name="mfi_client_title">MFI Client</string>
    <string name="client_id">Client ID</string>
    <string name="phone_no">Phone No.</string>
    <string name="phone_no_client">Phone No.</string>
</resources>