<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/blue_quiz"
    android:weightSum="10"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/before_watching_vdo"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_weight="5"
        android:gravity="bottom"
        android:layout_marginLeft="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:gravity="bottom"
        android:layout_weight="5"
        android:layout_marginBottom="10dp">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/cancel"
            android:textColor="@color/red"
            android:id="@+id/cancelButton"/>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/proceed"
            android:textColor="@color/green"
            android:id="@+id/proceedButton"/>

    </LinearLayout>

</LinearLayout>