<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:id="@+id/tvDateAttendance"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="-15dp"
            android:background="@android:color/darker_gray">

        </View>

        <!--group name and group id-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginBottom="10dp"
            android:id="@+id/comp_llGrpNameAndId">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/module_border"
                android:text="@string/group_name_module"
                android:layout_weight="50"
                android:gravity="center"
                android:layout_marginRight="5dp"
                android:id="@+id/tv_gName_on_attend"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/module_border"
                android:text="@string/group_id_module"
                android:gravity="center"
                android:layout_weight="50"
                android:layout_marginLeft="5dp"
                android:id="@+id/tv_gId_on_attend"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/no_of_members_present"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_NoOfMemberPresent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/time"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvTimeAttendance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="21:30:40"
                    android:textSize="20sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/location"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:id="@+id/llGeoLoc"
                    android:background="@drawable/border_location">

                    <EditText
                        android:id="@+id/tvLocAttendance"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="20"
                        android:hint="@string/geo_location"
                        android:gravity="center"/>

                    <ImageView
                        android:id="@+id/ibLocAttendance"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="80"
                        android:clickable="true"
                        android:src="@drawable/small_loc_icon"
                        android:background="@android:color/transparent"/>
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/bSubmitAttendance"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mfisubmit" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
