<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/mfi_field_staff"
        android:textColor="@color/blue"
        android:textSize="25sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="-15dp"
        android:background="@android:color/darker_gray">

    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/mfi"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/spinnerMFI"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:dropDownWidth="match_parent" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/llMFINameOther"
            android:visibility="gone">

            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/specify_MFI"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_mfi_name_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/id_staff"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_staff_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>




        <Button
            android:id="@+id/b_mfi_staff_submit"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mfisubmit" />

    </LinearLayout>



</LinearLayout>
</ScrollView>
