<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choices"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/blue"
            android:layout_marginBottom="20dp"
            android:id="@+id/tvIdentifyYourself" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="-15dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/compulsory"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border_lang"
                android:gravity="center"
                android:text="@string/compulsory"
                android:textColor="@color/blue"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/desirable"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@drawable/border_lang"
                android:gravity="center"
                android:text="@string/desirable"
                android:textColor="@color/blue"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/supplementary"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@drawable/border_lang"
                android:gravity="center"
                android:text="@string/supplementary_vidoes"
                android:textColor="@color/blue"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />



        </LinearLayout>

    </LinearLayout>
</ScrollView>
